Fixed whitespace issue

--- a/django_test/TextScuplt/word_features/static/word_features/css/diff.css
+++ b/django_test/TextScuplt/word_features/static/word_features/css/diff.css
@@ -1,5 +1,5 @@
 #content {
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 50px auto;
     border: 1px solid black;
 }
